--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "@frontend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,11 +9,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "cross-env": "5.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "cross-env": "5.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -48,5 +47,8 @@
     "eslint-plugin-react": "^7.31.11"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "exports": {
+    "./*": "./src"
+  }
 }
