--- a/packages/shared/.swcrc
+++ b/packages/shared/.swcrc
@@ -1,5 +1,13 @@
 {
     "module": {
         "type": "commonjs"
+    },
+    "jsc": {
+        "parser": {
+            "syntax": "typescript",
+        },
+        "paths": {
+            "@shared/*": ["./*"]
+        }
     }
 }
