--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,11 +10,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@webapp/shared": "workspace:^",
     "cross-env": "5.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "shared": "workspace:^",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
