--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -66,7 +66,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "node scripts/build.js",
+    "dev": "node scripts/start.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
