--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -15,7 +15,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": "./",
+    "paths": {
+      "@webapp/shared/*": ["../shared/src/*"],
+      "@frontend/*": ["./src/*"]
+    }
   },
   "include": ["./*"]
 }
