--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -21,5 +21,5 @@
       "@frontend/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"] /* For some reason this is important. ["./"] for instance does not work */
 }
