--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -65,9 +65,9 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "node scripts/build.js",
     "dev": "node scripts/start.js",
+    "dev:watch": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
